Fix menu page card overflow bug and remove redundant CSS code

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  height: 100%;
   background-color: linen;
   overflow-x: hidden;
 }
@@ -19,7 +18,6 @@ img {
 }
 
 main {
-  height: auto;
   width: 100%;
   padding: 50px;
   margin-bottom: 50px;
@@ -182,6 +180,17 @@ input[type="email"] {
   padding: 25px;
   text-align: center;
   font-family: 'Merriweather', serif;
+}
+
+
+
+
+/* MENU */
+
+.menu-container {
+  width: 100%;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 
